--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,15 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>aw</title>
+		<style>
+			body {
+				background-color: #222;
+				color: #dcdcdc;
+			}
+			a {
+				color: #4f8cc9;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="main"></div>
